--- a/geoffrey.css
+++ b/geoffrey.css
@@ -1,3 +1,15 @@
 body {
   background-image: url("");
 }
+
+.dropbtn {
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
