--- a/geoffrey.css
+++ b/geoffrey.css
@@ -3,10 +3,16 @@ body {
 }
 
 .dropbtn {
+    background-color: #4CAF50;
+    color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
 }
 
 .dropdown {
